feat: Add schedule module

--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -9,5 +9,8 @@
         <li>
             <a routerLink="/circuits" routerLinkActive="active">Circuits</a>
         </li>
+        <li>
+            <a routerLink="/schedule" routerLinkActive="active">Schedule</a>
+        </li>
     </ul>
 </nav>
