--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -82,6 +82,15 @@
         color: $white;
         background: $primary;
         border-radius: 100%;
+        &.race-subtitle {
+            top: 0 !important;
+            left: 7px;
+            width: 70px !important;
+            height: auto !important;
+            color: $primary !important;
+            background: transparent !important;
+            border-radius: unset !important;
+        }
     }
     p {
         font-size: 0.9rem;
