--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-select-arrow {
   color: white;
 }
+
+.mat-spinner {
+  margin: 3rem auto 0 auto;
+}
