--- a/src/app/modules/constructors/pages/constructors/constructors.component.html
+++ b/src/app/modules/constructors/pages/constructors/constructors.component.html
@@ -1,1 +1,2 @@
-<app-constructors-drivers [type]="'constructors'" [data$]="constructors$"></app-constructors-drivers>
+<app-constructors-drivers *ngIf="!isLoading" [type]="'constructors'" [data]="constructors"></app-constructors-drivers>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
