refactor: Remove hover transition from header of table

--- a/src/app/modules/home/components/table/table.component.scss
+++ b/src/app/modules/home/components/table/table.component.scss
@@ -29,11 +29,13 @@ input, input::placeholder, th, td {
     color: $white;
 }
 
-tr {
-    cursor: pointer;
-    transition: .4s ease-in-out;
-    &:hover {
-        background: darken($accent, 5%);
+::ng-deep tbody {
+    tr {
+        cursor: pointer;
+        transition: .4s ease-in-out;
+        &:hover {
+            background: darken($accent, 5%);
+        }
     }
 }
 
