--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,4 +114,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-spinner {
   margin: 3rem auto 0 auto;
+  &.driver-constructor {
+    top: 3rem;
+    margin: 0 auto;
+  }
 }
