--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -28,22 +28,33 @@ ul {
 }
 
 @media(min-width: 768px) {
+  :host {
+    height: 100%;
+  }
+
+  nav {
+    height: 100%;
     ul {
-        @include flex(row, nowrap, unset, center);
+        @include flex(row, nowrap, center, center);
+        height: 100%;
         li {
-            &:not(:first-of-type) {
-                margin-left: 0.5rem;
-            }
+            height: 100%;
             a {
+                display: inline-flex;
+                align-items: center;
                 width: unset;
+                height: 100%;
+                padding: 0 0.8rem;
                 color: $white !important;
-                background: darken($primary, 10%) !important;
-                border-radius: 4px;
-                box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
+                transition: .4s ease-in-out;
+                &:hover {
+                  background: $accent;
+                }
                 &.active {
                     background: $accent !important;
                 }
             }
         }
     }
+  }
 }
