--- a/src/app/modules/circuits/pages/circuits/circuits.component.scss
+++ b/src/app/modules/circuits/pages/circuits/circuits.component.scss
@@ -1,5 +1,12 @@
 @import 'src/assets/scss/main';
 
+h2 {
+  text-align: center;
+  @media(min-width: 768px) {
+    text-align: left;
+  }
+}
+
 .grid {
     gap: 60px 20px;
     margin-bottom: 3rem;
