--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
@@ -3,5 +3,5 @@
     <app-map [lat]="data.lat" [long]="data.long"></app-map>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close color="accent">Close</button>
+  <button mat-raised-button mat-dialog-close color="accent">CLOSE</button>
 </mat-dialog-actions>
