--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -23,11 +23,19 @@
     }
 }
 
-a {
-    color: $white;
-    text-decoration: underline;
+.wikipedia-link {
+  display: inline-flex !important;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0 !important;
+  color: $primary;
 }
 
-.mat-card-actions {
-    margin-left: 0.1rem;
+.mat-card-footer {
+  display: flex;
+  justify-content: flex-end;
+  margin: auto 0 0 0;
+  button:last-of-type {
+    margin-left: .3rem;
+  }
 }
