--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -62,8 +62,8 @@
     height: 100%;
     & > .mat-card {
         height: 100%;
+        padding: 8px 16px;
         background: $accent;
-        position: relative;
     }
     .mat-card-header {
         display: initial;
