--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer>
-    <p>Copyright &copy; 2022. All Rights Reserved.</p>
+  <mat-icon (click)="goTop()">arrow_upward</mat-icon>
+  <p>Copyright &copy; 2022. All Rights Reserved.</p>
 </footer>
