refactor: Make modules for header and footer

--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar class="max-width" color="primary">
         <mat-toolbar-row>
             <h1 (click)="router.navigate(['/'])">
-                <img src="assets/images/f1_logo.png" alt="formula one logo">
+                <img src="../../../../../assets/images/f1_logo.png" alt="formula one logo">
                 Formula One
             </h1>
             <section class="navigation">
