--- a/src/app/modules/header/components/navigation/navigation.component.scss
+++ b/src/app/modules/header/components/navigation/navigation.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/main';
+@import '../../../../../assets/scss/main';
 
 ul {
     @include flex(column, nowrap, center, center);
