refactor: Change border radius of mat card subtitle on card class

--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -81,7 +81,7 @@
         height: 30px;
         color: $white;
         background: $primary;
-        border-radius: 100%;
+        border-radius: 4px;
         &.race-subtitle {
             top: 0 !important;
             left: 7px;
