--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,6 +99,10 @@ body { margin: 0; font-family: 'Titillium Web', sans-serif; }
   margin: 0 ;
 }
 
+.mat-tab-label-container {
+  margin-bottom: 1rem;
+}
+
 .mat-form-field-label {
   color: white;
 }
