--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -1,19 +1,13 @@
 @import 'src/assets/scss/main';
 
-h2, p {
+h2 {
     text-align: center;
-    margin-bottom: 1rem !important;
-}
-
-p {
-    font-size: 0.9rem;
+    margin-bottom: 2rem;
 }
 
 @media(min-width: 768px) {
-    h2, p {
+    h2 {
       text-align: left;
-    }
-    p {
-        font-size: 1rem;
+      margin-bottom: 3rem;
     }
 }
