--- a/src/app/shared/modules/drivers-constructors/drivers-constructors.component.scss
+++ b/src/app/shared/modules/drivers-constructors/drivers-constructors.component.scss
@@ -1,8 +1,1 @@
-@import '../../../../assets/scss/main';
-
-h2 {
-  text-align: center;
-  @media(min-width: 768px) {
-    text-align: left;
-  }
-}
+@import 'src/assets/scss/main';
