--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -1,3 +1,12 @@
+h2 {
+  font-size: 2rem;
+  text-align: center;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border: 3px solid lighten($accent, 10%);
+  border-radius: 10px;
+}
+
 h2, h3, p {
   color: white;
 }
@@ -13,7 +22,9 @@ a {
 // Media
 @media(min-width: 768px){
     h2 {
-        font-size: 1.5rem;
+      font-size: 2.2rem;
+      text-align: left;
+      margin-bottom: 3rem;
     }
 
     h3 {
@@ -23,7 +34,8 @@ a {
 
 @media(min-width: 1024px){
     h2 {
-        font-size: 1.7rem;
+        font-size: 2.4rem;
+        margin-bottom: 4rem;
         &.constructors-drivers-circuits-header {
             margin-bottom: 1.5rem;
         }
@@ -32,6 +44,6 @@ a {
 
 @media(min-width: 1280px){
     h2 {
-        font-size: 2rem;
+        font-size: 2.6rem;
     }
 }
