--- a/src/app/modules/circuits/pages/circuits/circuits.component.html
+++ b/src/app/modules/circuits/pages/circuits/circuits.component.html
@@ -1,7 +1,7 @@
 <section class="max-width pad" *ngIf="!isLoading">
-    <h2 class="constructors-drivers-circuits-header">Circuits</h2>
+    <h2>Circuits</h2>
     <section class="grid">
-        <app-card *ngFor="let circuit of circuits" 
+        <app-card *ngFor="let circuit of circuits"
         [type]="'circuit'" [data]="circuit"></app-card>
     </section>
 </section>
