--- a/src/app/shared/modules/drivers-constructors/drivers-constructors.component.html
+++ b/src/app/shared/modules/drivers-constructors/drivers-constructors.component.html
@@ -1,5 +1,5 @@
 <section class="max-width pad">
-    <h2 class="constructors-drivers-circuits-header">{{ type === 'drivers' ? 'Drivers' : 'Constructors' }} List</h2>
+    <h2>{{ type === 'drivers' ? 'Drivers' : 'Constructors' }} List</h2>
     <section class="grid constructors-drivers">
         <article *ngFor="let details of data" class="box" (click)="navigateTo(details)">
             <section class="image-name-container">
