feat: Add pad class on home section

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="max-width">
+<div class="max-width pad">
   <h2>Standings</h2>
   <mat-tab-group mat-align-tabs="center" color="primary" backgroundColor="accent" class="tabs">
     <mat-tab label="Driver">
