refactor: Move section with max width and pad classes on app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <main>
     <app-season-filter></app-season-filter>
-    <router-outlet></router-outlet>
+    <section class="max-width pad">
+      <router-outlet></router-outlet>
+    </section>
 </main>
 <app-footer></app-footer>
