--- a/src/app/modules/circuits/pages/circuits/circuits.component.html
+++ b/src/app/modules/circuits/pages/circuits/circuits.component.html
@@ -1,8 +1,6 @@
-<section class="max-width pad" *ngIf="!isLoading">
-    <h2>Circuits</h2>
-    <section class="grid">
-        <app-card *ngFor="let circuit of circuits"
-        [type]="'circuit'" [data]="circuit"></app-card>
-    </section>
+<h2>Circuits</h2>
+<section class="grid" *ngIf="!isLoading">
+    <app-card *ngFor="let circuit of circuits"
+    [type]="'circuit'" [data]="circuit"></app-card>
 </section>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
