--- a/src/app/modules/schedule/pages/schedule/schedule.component.html
+++ b/src/app/modules/schedule/pages/schedule/schedule.component.html
@@ -1,7 +1,5 @@
-<section class="max-width pad" *ngIf="!isLoading">
-    <h2>Schedule</h2>
-    <section class="grid">
-        <app-card *ngFor="let round of schedule" [type]="'race'" [data]="round"></app-card>
-    </section>
+<h2>Schedule</h2>
+<section class="grid" *ngIf="!isLoading">
+    <app-card *ngFor="let round of schedule" [type]="'race'" [data]="round"></app-card>
 </section>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
