feat: Make a reusable component for page header and use it across the site

--- a/src/app/modules/constructors/pages/constructors/constructors.component.html
+++ b/src/app/modules/constructors/pages/constructors/constructors.component.html
@@ -1,2 +1,3 @@
+<app-page-header title="constructors"></app-page-header>
 <app-drivers-constructors *ngIf="!isLoading" [type]="'constructors'" [data]="constructors"></app-drivers-constructors>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
