--- a/src/app/modules/drivers/components/driver/driver.component.html
+++ b/src/app/modules/drivers/components/driver/driver.component.html
@@ -1,2 +1,3 @@
+<app-page-header title="driver details"></app-page-header>
 <app-driver-constructor *ngIf="!isLoading" [type]="'driver'" [details]="details" [results]="results"></app-driver-constructor>
 <mat-spinner *ngIf="isLoading" class="driver-constructor"></mat-spinner>
