--- a/src/app/modules/drivers/pages/drivers/drivers.component.html
+++ b/src/app/modules/drivers/pages/drivers/drivers.component.html
@@ -1,2 +1,3 @@
+<app-page-header title="drivers"></app-page-header>
 <app-drivers-constructors *ngIf="!isLoading" [type]="'drivers'" [data]="drivers"></app-drivers-constructors>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
