--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<h2>Standings</h2>
+<app-page-header title="standings"></app-page-header>
 <mat-tab-group mat-align-tabs="center" color="primary" backgroundColor="accent" class="tabs">
   <mat-tab label="Driver">
     <app-table [option]="'Driver'"></app-table>
