--- a/src/app/modules/constructors/components/constructor/constructor.component.html
+++ b/src/app/modules/constructors/components/constructor/constructor.component.html
@@ -1,2 +1,3 @@
+<app-page-header title="constructor details"></app-page-header>
 <app-driver-constructor *ngIf="!isLoading" [type]="'constructor'" [details]="details" [results]="results"></app-driver-constructor>
 <mat-spinner *ngIf="isLoading" class="driver-constructor"></mat-spinner>
