refactor: Change tabs alignement

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-page-header title="standings"></app-page-header>
-<mat-tab-group mat-align-tabs="center" color="primary" backgroundColor="accent" class="tabs">
+<mat-tab-group color="primary" backgroundColor="accent" class="tabs">
   <mat-tab label="Driver">
     <app-table [option]="'Driver'"></app-table>
   </mat-tab>
