refactor: Decrease font size of mat card title

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,6 +123,10 @@ a {
   background-color: white;
 }
 
+.mat-card-title {
+  font-size: 1.1rem !important;
+}
+
 .mat-card-header-text {
   color: white !important;
   margin: 0 !important;
