refactor: Change font size of h3 element

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,6 +98,10 @@ h2, h3, p {
   color: white;
 }
 
+h3 {
+  font-size: 1.2rem !important;
+}
+
 li {
   list-style-type: none;
 }
@@ -148,6 +152,12 @@ a {
 // Media
 @media(min-width: 768px){
   h3 {
-    font-size: 1.2rem;
+    font-size: 1.4rem !important;
+  }
+}
+
+@media(min-width: 1024px){
+  h3 {
+    font-size: 1.6rem !important;
   }
 }
