--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -4,6 +4,9 @@ h3 {
     padding: 0.5rem;
     background: lighten($accent, 5%);
     border-radius: 4px;
+    &.details-name {
+      min-width: 150px;
+    }
 }
 
 .details {
