--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@ $formula-one-theme: mat.define-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Titillium Web', sans-serif; }
 
-h2, h3, p {
+h2, h3, h4, p {
   color: white;
 }
 
