--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -1,12 +1,10 @@
 @import 'src/assets/scss/main';
 
-h3 {
+h3, h4 {
     padding: 0.5rem;
     background: lighten($accent, 5%);
     border-radius: 4px;
-    &.details-name {
-      min-width: 150px;
-    }
+    min-width: 150px;
 }
 
 .details {
