--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,6 +102,10 @@ h3 {
   font-size: 1.2rem !important;
 }
 
+h4 {
+  font-size: 1rem;
+}
+
 li {
   list-style-type: none;
 }
@@ -153,6 +157,10 @@ a {
 @media(min-width: 768px){
   h3 {
     font-size: 1.4rem !important;
+  }
+
+  h4 {
+    font-size: 1.2rem !important;
   }
 }
 
