--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -1,9 +1,13 @@
 @import 'src/assets/scss/main';
 
+h3 {
+  margin-bottom: 0;
+  border-left: 2px solid $primary;
+}
+
 h3, h4 {
     padding: 0.5rem;
     background: lighten($accent, 5%);
-    border-radius: 4px;
     min-width: 150px;
 }
 
