refactor: Change home module name into standings

--- a/src/app/modules/header/components/navigation/navigation.component.html
+++ b/src/app/modules/header/components/navigation/navigation.component.html
@@ -6,6 +6,9 @@
           </a>
         </li>
         <li>
+          <a routerLink="/standings" routerLinkActive="active">Standings</a>
+        </li>
+        <li>
             <a routerLink="/drivers" routerLinkActive="active">Drivers</a>
         </li>
         <li>
