--- a/src/app/modules/standings/pages/standings/standings.component.html
+++ b/src/app/modules/standings/pages/standings/standings.component.html
@@ -1,3 +1,4 @@
+<app-season-filter></app-season-filter>
 <app-page-header title="standings"></app-page-header>
 <mat-tab-group color="primary" backgroundColor="accent" class="tabs">
   <mat-tab label="Driver">
