--- a/src/app/modules/circuits/pages/circuits/circuits.component.html
+++ b/src/app/modules/circuits/pages/circuits/circuits.component.html
@@ -1,3 +1,4 @@
+<app-season-filter></app-season-filter>
 <app-page-header title="circuits"></app-page-header>
 <section class="grid" *ngIf="!isLoading">
     <app-card *ngFor="let circuit of circuits"
