--- a/src/app/modules/constructors/pages/constructors/constructors.component.html
+++ b/src/app/modules/constructors/pages/constructors/constructors.component.html
@@ -1,3 +1,4 @@
+<app-season-filter></app-season-filter>
 <app-page-header title="constructors"></app-page-header>
 <app-drivers-constructors *ngIf="!isLoading" [type]="'constructors'" [data]="constructors"></app-drivers-constructors>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
