--- a/src/app/shared/modules/season-filter/season-filter.component.html
+++ b/src/app/shared/modules/season-filter/season-filter.component.html
@@ -1,4 +1,4 @@
-<section class="max-width" *ngIf="isFilterVisible$ | async">
+<section>
     <mat-form-field appearance="standard">
         <mat-label>Year</mat-label>
         <mat-select [formControl]="yearControl">
