--- a/src/app/shared/modules/page-header/components/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/components/page-header/page-header.component.html
@@ -1,4 +1,9 @@
-<h2>{{ title | uppercase }}</h2>
+<h2>
+  {{ title | uppercase }}
+  <span>
+    <ng-content></ng-content>
+  </span>
+</h2>
 <section class="road">
   <div></div>
   <div></div>
