refactor: Change tooltip content on location button

--- a/src/app/shared/modules/card/card.component.html
+++ b/src/app/shared/modules/card/card.component.html
@@ -38,7 +38,7 @@
               <mat-icon>open_in_new</mat-icon>
             </a>
           </button>
-          <button mat-icon-button color="primary" (click)="showLocation(data.Location.lat, data.Location.long)" matTooltip="View map" matTooltipPosition="below">
+          <button mat-icon-button color="primary" (click)="showLocation(data.Location.lat, data.Location.long)" matTooltip="View on map" matTooltipPosition="below">
             <mat-icon>location_searching</mat-icon>
           </button>
         </mat-card-footer>
