--- a/src/app/modules/footer/footer.component.scss
+++ b/src/app/modules/footer/footer.component.scss
@@ -3,14 +3,14 @@
 footer {
     padding: 0.8rem 0;
     background: $accent;
-    border-top: 1px solid lighten($accent, 5%);
+    border-top: 1px solid $lightAccent;
 }
 
 mat-icon {
   display: block;
   padding: 0.2rem;
   margin: 0 auto .5rem;
-  background: lighten($accent, 5%);
+  background: $lightAccent;
   color: $white;
   border-radius: 4px;
   cursor: pointer;
