--- a/src/app/modules/standings/components/table/table.component.scss
+++ b/src/app/modules/standings/components/table/table.component.scss
@@ -14,7 +14,7 @@
 
 .mat-table {
     width: 100%;
-    background: lighten($accent, 5%);
+    background: $lightAccent;
 }
 
 th {
@@ -29,7 +29,7 @@ input, input::placeholder, th, td {
     font-size: 1.2rem;
     text-align: center;
     padding: 0.5rem 0;
-    background: lighten($accent, 5%);
+    background: $lightAccent;
 }
 
 @media(min-width: 1024px) {
