--- a/src/app/shared/modules/card/card.component.scss
+++ b/src/app/shared/modules/card/card.component.scss
@@ -10,7 +10,7 @@
 }
 
 .driver {
-    background: lighten($accent, 5%);
+    background: $lightAccent;
     padding: 0.3rem;
     border-radius: 4px;
     cursor: pointer;
