--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -19,7 +19,7 @@
 .box {
     @include flex(row, nowrap, space-between, center);
     padding: 0.5rem;
-    background: lighten($accent, 5%);
+    background: $lightAccent;
     border-right: 1px solid lighten($primary, 20%);
     border-bottom: 1px solid lighten($primary, 20%);
     color: $white;
@@ -70,7 +70,7 @@
     }
     .mat-card-title {
         padding-bottom: 12px;
-        border-bottom: 1px solid lighten($accent, 5%);
+        border-bottom: 1px solid $lightAccent;
     }
     .mat-card-subtitle {
         @include flex(row, nowrap, center, center);
