--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -69,7 +69,7 @@
         display: initial;
     }
     .mat-card-title {
-        padding-bottom: 12px;
+        padding: 12px 0;
         border-bottom: 1px solid $lightAccent;
     }
     .mat-card-subtitle {
