--- a/src/app/shared/modules/card/card.component.html
+++ b/src/app/shared/modules/card/card.component.html
@@ -33,12 +33,10 @@
           </ng-container>
         </mat-card-content>
         <mat-card-footer *ngIf="type === 'circuit'">
-          <button mat-icon-button matTooltip="Wikipedia" matTooltipPosition="below">
-            <a [href]="data.url" target="_blank" rel="noreferrer" class="wikipedia-link">
-              <mat-icon>open_in_new</mat-icon>
-            </a>
-          </button>
-          <button mat-icon-button color="primary" (click)="showLocation(data.Location.lat, data.Location.long)" matTooltip="View on map" matTooltipPosition="below">
+          <a [href]="data.url" target="_blank" rel="noreferrer" class="wikipedia-link" mat-mini-fab color="accent" matTooltip="Wikipedia" matTooltipPosition="below">
+            <mat-icon>open_in_new</mat-icon>
+          </a>
+          <button mat-mini-fab color="accent" (click)="showLocation(data.Location.lat, data.Location.long)" matTooltip="View on map" matTooltipPosition="below">
             <mat-icon>location_searching</mat-icon>
           </button>
         </mat-card-footer>
