--- a/src/app/shared/modules/card/card.component.scss
+++ b/src/app/shared/modules/card/card.component.scss
@@ -28,14 +28,11 @@
   justify-content: center;
   align-items: center;
   margin-top: 0 !important;
-  color: $primary;
 }
 
 .mat-card-footer {
-  display: flex;
-  justify-content: flex-end;
-  margin: auto 0 0 0;
+  padding-left: 16px;
   button:last-of-type {
-    margin-left: .3rem;
+    margin-left: .5rem;
   }
 }
